# timeconv

./: LICENSE  README.md  pyproject.toml
src/timeconv/: __init__.py  converter.py
tests/: timeconv_test.py
