[project]
name = "timeconv"
version = "0.1.0"
description = "Convert hours, minutes, and seconds"
authors = ["Wan Naim Zuhair <wnzuhair@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["timeconv_test.py", "test_*.py"]
pythonpath = ["src"]
